unpackaged/main/default/objects/Visit_completion_report__c/Visit_completion_report__c.object-meta.xml
<CustomObject>
    <label>Visit completion report</label>
    <nameField>
        <displayFormat>VCR-{000000}</displayFormat>
        <label>Visit completion report</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Visit completion reports</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>