unpackaged/main/default/objects/Visit_completion_report__c/fields/Add_second_timeslot__c.field-meta.xml
<CustomField>
    <fullName>Add_second_timeslot__c</fullName>
    <label>Add second timeslot</label>
    <length>255</length>
    <type>Text</type>
</CustomField>