unpackaged/main/default/objects/Visit_completion_report__c/fields/ADDITIONAL_CHARGES_FIXED_CHARGE_APPLIED__c.field-meta.xml
<CustomField>
    <fullName>ADDITIONAL_CHARGES_FIXED_CHARGE_APPLIED__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ADDITIONAL CHARGES/FIXED CHARGE APPLIED</label>
    <type>Checkbox</type>
</CustomField>