unpackaged/main/default/objects/Visit_completion_report__c/fields/Arrival_timeslot__c.field-meta.xml
<CustomField>
    <fullName>Arrival_timeslot__c</fullName>
    <label>Arrival timeslot</label>
    <length>255</length>
    <type>Text</type>
</CustomField>