unpackaged/main/default/objects/Visit_completion_report__c/fields/Attended_Site__c.field-meta.xml
<CustomField>
    <fullName>Attended_Site__c</fullName>
    <label>Attended Site?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>