unpackaged/main/default/objects/Visit_completion_report__c/fields/BOOKING_DISCOUNT_CORRECT__c.field-meta.xml
<CustomField>
    <fullName>BOOKING_DISCOUNT_CORRECT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BOOKING DISCOUNT CORRECT</label>
    <type>Checkbox</type>
</CustomField>