unpackaged/main/default/objects/Visit_completion_report__c/fields/CERTIFICATION_CHARGED__c.field-meta.xml
<CustomField>
    <fullName>CERTIFICATION_CHARGED__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CERTIFICATION CHARGED</label>
    <type>Checkbox</type>
</CustomField>