unpackaged/main/default/objects/Visit_completion_report__c/fields/Collection_fee_pay_O1__c.field-meta.xml
<CustomField>
    <fullName>Collection_fee_pay_O1__c</fullName>
    <label>Collection fee pay O1 - to delete</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>