unpackaged/main/default/objects/Visit_completion_report__c/fields/Collection_fee_required__c.field-meta.xml
<CustomField>
    <fullName>Collection_fee_required__c</fullName>
    <label>Collection fee required</label>
    <length>255</length>
    <type>Text</type>
</CustomField>