unpackaged/main/default/objects/Visit_completion_report__c/fields/Complaint_Related_to_Engineer__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Related_to_Engineer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Complaint Related to Engineer</label>
    <referenceTo>ServiceResource</referenceTo>
    <relationshipLabel>Visit completion reports Complaints</relationshipLabel>
    <relationshipName>Visit_completion_reports_Complaints</relationshipName>
    <type>Lookup</type>
</CustomField>