unpackaged/main/default/objects/Visit_completion_report__c/fields/Complaint_Responsible__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Responsible__c</fullName>
    <description>Who was responsible for the complaint - Office or the Operative?</description>
    <inlineHelpText>Who was responsible for the complaint - Office or the Operative?</inlineHelpText>
    <label>Complaint Responsible</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Office</fullName>
            </value>
            <value>
                <fullName>Operative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>