unpackaged/main/default/objects/Visit_completion_report__c/fields/CORRECT_DISCOUNT_APPLIED_IN_VCR__c.field-meta.xml
<CustomField>
    <fullName>CORRECT_DISCOUNT_APPLIED_IN_VCR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CORRECT DISCOUNT APPLIED IN VCR</label>
    <type>Checkbox</type>
</CustomField>