unpackaged/main/default/objects/Visit_completion_report__c/fields/CORRECT_TRADE_RATE_CHARGED_BASED_JOBNOTE__c.field-meta.xml
<CustomField>
    <fullName>CORRECT_TRADE_RATE_CHARGED_BASED_JOBNOTE__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CORRECT TRADE RATE CHARGED - BASED ON JOB NOTES</description>
    <inlineHelpText>CORRECT TRADE RATE CHARGED - BASED ON JOB NOTES</inlineHelpText>
    <label>CORRECT TRADE RATE CHARGED-BASED JOBNOTE</label>
    <type>Checkbox</type>
</CustomField>