unpackaged/main/default/objects/Visit_completion_report__c/fields/Cost_Status__c.field-meta.xml
<CustomField>
    <fullName>Cost_Status__c</fullName>
    <label>Cost Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chargeable to client</fullName>
            </value>
            <value>
                <fullName>Engineer deducted to match costs of ONSA</fullName>
            </value>
            <value>
                <fullName>Unrecoverable costs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>