unpackaged/main/default/objects/Visit_completion_report__c/fields/Customer_phone__c.field-meta.xml
<CustomField>
    <fullName>Customer_phone__c</fullName>
    <label>Customer phone</label>
    <type>Phone</type>
</CustomField>