unpackaged/main/default/objects/Visit_completion_report__c/fields/Date_Time_Complaint_Raised_Ticked__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Complaint_Raised_Ticked__c</fullName>
    <description>The date and time the checkbox &#39;Complaint Raised?&#39; was ticked</description>
    <inlineHelpText>The date and time the checkbox &#39;Complaint Raised?&#39; was ticked</inlineHelpText>
    <label>Date/Time Complaint Raised Ticked</label>
    <type>DateTime</type>
</CustomField>