unpackaged/main/default/objects/Visit_completion_report__c/fields/Date_Time_Complaint_Resolved_Ticked__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Complaint_Resolved_Ticked__c</fullName>
    <label>Date/Time Complaint Resolved Ticked</label>
    <type>DateTime</type>
</CustomField>