unpackaged/main/default/objects/Visit_completion_report__c/fields/Date_Time_Field_Support_was_set__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Field_Support_was_set__c</fullName>
    <description>The Date/Time a User set the &#39;Field Support&#39; from its default value of &#39;Not Required&#39;</description>
    <inlineHelpText>The Date/Time a User set the &#39;Field Support&#39; from its default value of &#39;Not Required&#39;</inlineHelpText>
    <label>Date/Time Field Support was set</label>
    <type>DateTime</type>
</CustomField>