unpackaged/main/default/objects/Visit_completion_report__c/fields/Date_Time_Ticked_Invoiced__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Ticked_Invoiced__c</fullName>
    <label>Date Time Ticked Invoiced</label>
    <type>DateTime</type>
</CustomField>