unpackaged/main/default/objects/Visit_completion_report__c/fields/DATE_YOU_WANT_OP_TO_BE_PAID__c.field-meta.xml
<CustomField>
    <fullName>DATE_YOU_WANT_OP_TO_BE_PAID__c</fullName>
    <label>DATE YOU WANT OP TO BE PAID</label>
    <type>Date</type>
</CustomField>