unpackaged/main/default/objects/Visit_completion_report__c/fields/Deducted_operative_made_aware__c.field-meta.xml
<CustomField>
    <fullName>Deducted_operative_made_aware__c</fullName>
    <label>Deducted operative made aware?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Made Aware</fullName>
            </value>
            <value>
                <fullName>Not aware</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>