unpackaged/main/default/objects/Visit_completion_report__c/fields/Description_of_works_carried_out__c.field-meta.xml
<CustomField>
    <fullName>Description_of_works_carried_out__c</fullName>
    <label>Description of works carried out</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>