unpackaged/main/default/objects/Visit_completion_report__c/fields/Details_of_User_who_bypassedFinalPayment__c.field-meta.xml
<CustomField>
    <fullName>Details_of_User_who_bypassedFinalPayment__c</fullName>
    <label>Details of User who bypassedFinalPayment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>