unpackaged/main/default/objects/Visit_completion_report__c/fields/Discount_offered__c.field-meta.xml
<CustomField>
    <fullName>Discount_offered__c</fullName>
    <label>Discount offered</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>