unpackaged/main/default/objects/Visit_completion_report__c/fields/DISCOUNT_USED_CORRECTLY_IN_FINAL_PROCESS__c.field-meta.xml
<CustomField>
    <fullName>DISCOUNT_USED_CORRECTLY_IN_FINAL_PROCESS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DISCOUNT USED CORRECTLY IN FINAL PROCESS</label>
    <type>Checkbox</type>
</CustomField>