unpackaged/main/default/objects/Visit_completion_report__c/fields/Field_Support__c.field-meta.xml
<CustomField>
    <fullName>Field_Support__c</fullName>
    <label>Field Support</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Field_Support</valueSetName>
    </valueSet>
</CustomField>