unpackaged/main/default/objects/Visit_completion_report__c/fields/Field_Support_Status__c.field-meta.xml
<CustomField>
    <fullName>Field_Support_Status__c</fullName>
    <label>Field Support Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>with FSM</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>