unpackaged/main/default/objects/Visit_completion_report__c/fields/Finance_Check_Final__c.field-meta.xml
<CustomField>
    <fullName>Finance_Check_Final__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Finance Check Final</label>
    <type>Checkbox</type>
</CustomField>