unpackaged/main/default/objects/Visit_completion_report__c/fields/Finish_Time__c.field-meta.xml
<CustomField>
    <fullName>Finish_Time__c</fullName>
    <label>Finish Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>