unpackaged/main/default/objects/Visit_completion_report__c/fields/Fixed_price_pay_O1__c.field-meta.xml
<CustomField>
    <fullName>Fixed_price_pay_O1__c</fullName>
    <label>Fixed price pay O1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>