unpackaged/main/default/objects/Visit_completion_report__c/fields/Fixed_price_pay_O1_Capped__c.field-meta.xml
<CustomField>
    <fullName>Fixed_price_pay_O1_Capped__c</fullName>
    <formula>IF ( VALUE( SUBSTITUTE(Discount__c, &quot;%&quot;, &quot;&quot;) ) &gt;10, 0.5*  Fixed_price_charge__c * 0.9,  Fixed_price_pay_O1__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fixed price pay O1 (Capped)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>