unpackaged/main/default/objects/Visit_completion_report__c/fields/Fixed_price_pay_O1_Capped_TESTING_ONLY__c.field-meta.xml
<CustomField>
    <fullName>Fixed_price_pay_O1_Capped_TESTING_ONLY__c</fullName>
    <formula>IF ( VALUE( SUBSTITUTE(Discount__c, &quot;%&quot;, &quot;&quot;) ) &gt;10, 0.5* BLANKVALUE(Fixed_price_charge__c,0) * 0.9, BLANKVALUE(Fixed_price_pay_O1__c, 0) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fixed price pay O1 (Capped) TESTING ONLY</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>