unpackaged/main/default/objects/Visit_completion_report__c/fields/Fixed_price_service__c.field-meta.xml
<CustomField>
    <fullName>Fixed_price_service__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fixed price service</label>
    <type>Checkbox</type>
</CustomField>