unpackaged/main/default/objects/Visit_completion_report__c/fields/Fixed_price_service_details__c.field-meta.xml
<CustomField>
    <fullName>Fixed_price_service_details__c</fullName>
    <label>Fixed price service details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>