unpackaged/main/default/objects/Visit_completion_report__c/fields/FOC_call_back__c.field-meta.xml
<CustomField>
    <fullName>FOC_call_back__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FOC call back</label>
    <type>Checkbox</type>
</CustomField>