unpackaged/main/default/objects/Visit_completion_report__c/fields/For_chargeable_work__c.field-meta.xml
<CustomField>
    <fullName>For_chargeable_work__c</fullName>
    <label>For chargeable work</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Operative continuing right now on hourly rate</fullName>
            </value>
            <value>
                <fullName>ONSA Accepted</fullName>
            </value>
            <value>
                <fullName>ONSA Pending</fullName>
            </value>
            <value>
                <fullName>ONSA Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>