unpackaged/main/default/objects/Visit_completion_report__c/fields/Fully_Paid_or_Not__c.field-meta.xml
<CustomField>
    <fullName>Fully_Paid_or_Not__c</fullName>
    <formula>IF(Outstanding_Balance__c=0,TRUE,FALSE)</formula>
    <label>Fully Paid or Not?</label>
    <type>Checkbox</type>
</CustomField>