unpackaged/main/default/objects/Visit_completion_report__c/fields/Further_work_required__c.field-meta.xml
<CustomField>
    <fullName>Further_work_required__c</fullName>
    <label>Further work required</label>
    <length>255</length>
    <type>Text</type>
</CustomField>