unpackaged/main/default/objects/Visit_completion_report__c/fields/FurtherWorkChargeable_does_Client_accept__c.field-meta.xml
<CustomField>
    <fullName>FurtherWorkChargeable_does_Client_accept__c</fullName>
    <description>If further work are chargeable, the client must be informed. Do they accept this?</description>
    <inlineHelpText>If further work are chargeable, the client must be informed. Do they accept this?</inlineHelpText>
    <label>FurtherWorkChargeable-does Client accept</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>