unpackaged/main/default/objects/Visit_completion_report__c/fields/Gas_supply_type_1__c.field-meta.xml
<CustomField>
    <fullName>Gas_supply_type_1__c</fullName>
    <label>Gas supply type (1)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>