unpackaged/main/default/objects/Visit_completion_report__c/fields/Has_work_been_carried_out_adequately__c.field-meta.xml
<CustomField>
    <fullName>Has_work_been_carried_out_adequately__c</fullName>
    <label>Has work been carried out adequately?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>