unpackaged/main/default/objects/Visit_completion_report__c/fields/Hourly_rate_timeslot_1__c.field-meta.xml
<CustomField>
    <fullName>Hourly_rate_timeslot_1__c</fullName>
    <label>Hourly rate timeslot 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>