unpackaged/main/default/objects/Visit_completion_report__c/fields/Hours_of_work_completed_timeslot_2__c.field-meta.xml
<CustomField>
    <fullName>Hours_of_work_completed_timeslot_2__c</fullName>
    <label>Hours of work completed (timeslot 2)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>