unpackaged/main/default/objects/Visit_completion_report__c/fields/If_another_Operative_why__c.field-meta.xml
<CustomField>
    <fullName>If_another_Operative_why__c</fullName>
    <label>If another Operative why?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initial operative no longer with aspect</fullName>
            </value>
            <value>
                <fullName>Initial operative not cable of undertaking works</fullName>
            </value>
            <value>
                <fullName>Initial operative not available</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>