unpackaged/main/default/objects/Visit_completion_report__c/fields/If_remedial_works_are_FOC_who_is_doing__c.field-meta.xml
<CustomField>
    <fullName>If_remedial_works_are_FOC_who_is_doing__c</fullName>
    <label>If remedial works are FOC who is doing?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Engineer who carried out the initial work</fullName>
            </value>
            <value>
                <fullName>Another Operative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>