unpackaged/main/default/objects/Visit_completion_report__c/fields/Image_of_Before_Situation__c.field-meta.xml
<CustomField>
    <fullName>Image_of_Before_Situation__c</fullName>
    <label>Image of Before Situation</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>