unpackaged/main/default/objects/Visit_completion_report__c/fields/Image_of_Work_in_question_attached__c.field-meta.xml
<CustomField>
    <fullName>Image_of_Work_in_question_attached__c</fullName>
    <description>Please attach the image in the &#39;Files&#39; related list section</description>
    <inlineHelpText>Please attach the image in the &#39;Files&#39; related list section</inlineHelpText>
    <label>Image of Work in question attached?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>