unpackaged/main/default/objects/Visit_completion_report__c/fields/INCORRECT_PROCESSING_OF_JOB_1__c.field-meta.xml
<CustomField>
    <fullName>INCORRECT_PROCESSING_OF_JOB_1__c</fullName>
    <label>INCORRECT PROCESSING OF JOB 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>