unpackaged/main/default/objects/Visit_completion_report__c/fields/Invoiced__c.field-meta.xml
<CustomField>
    <fullName>Invoiced__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has the VCR been invoiced for?</description>
    <inlineHelpText>Has the VCR been invoiced for?</inlineHelpText>
    <label>Invoiced?</label>
    <type>Checkbox</type>
</CustomField>