unpackaged/main/default/objects/Visit_completion_report__c/fields/Is_Customer_Satisfied__c.field-meta.xml
<CustomField>
    <fullName>Is_Customer_Satisfied__c</fullName>
    <label>Is Customer Satisfied?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>