unpackaged/main/default/objects/Visit_completion_report__c/fields/Is_the_Work_Within_Guarantee_Period__c.field-meta.xml
<CustomField>
    <fullName>Is_the_Work_Within_Guarantee_Period__c</fullName>
    <label>Is the Work Within Guarantee Period?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>