unpackaged/main/default/objects/Visit_completion_report__c/fields/J_VALIDATION_DATE_TICKED__c.field-meta.xml
<CustomField>
    <fullName>J_VALIDATION_DATE_TICKED__c</fullName>
    <label>J VALIDATION DATE TICKED</label>
    <type>Date</type>
</CustomField>