unpackaged/main/default/objects/Visit_completion_report__c/fields/J_VALIDATION_WHO_TICKED__c.field-meta.xml
<CustomField>
    <fullName>J_VALIDATION_WHO_TICKED__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>J VALIDATION WHO TICKED</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Visit_completion_reports2</relationshipName>
    <type>Lookup</type>
</CustomField>