unpackaged/main/default/objects/Visit_completion_report__c/fields/Key_Account__c.field-meta.xml
<CustomField>
    <fullName>Key_Account__c</fullName>
    <label>Key Account?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>