unpackaged/main/default/objects/Visit_completion_report__c/fields/Labour_charge__c.field-meta.xml
<CustomField>
    <fullName>Labour_charge__c</fullName>
    <label>Labour charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>