unpackaged/main/default/objects/Visit_completion_report__c/fields/Labour_charge_O1__c.field-meta.xml
<CustomField>
    <fullName>Labour_charge_O1__c</fullName>
    <label>Labour charge O1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>