unpackaged/main/default/objects/Visit_completion_report__c/fields/Labour_pay_O1_Capped_TESTING_ONLY__c.field-meta.xml
<CustomField>
    <fullName>Labour_pay_O1_Capped_TESTING_ONLY__c</fullName>
    <formula>IF ( VALUE( SUBSTITUTE(Discount__c, &quot;%&quot;, &quot;&quot;) ) &gt;10, Labour_pay_percantage_calculated__c * Labour_charge_O1__c * 0.9, BLANKVALUE(Labour_pay_O1__c, 0) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Labour pay O1 (Capped) TESTING ONLY</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>