unpackaged/main/default/objects/Visit_completion_report__c/fields/Labour_pay_percantage_calculated__c.field-meta.xml
<CustomField>
    <fullName>Labour_pay_percantage_calculated__c</fullName>
    <formula>Labour_pay_O1__c / (Labour_charge_O1__c -  (Discount_offered__c  - IF(( NOT (ISBLANK(   Fixed_price_charge__c))) ,  Fixed_price_charge__c *   (VALUE( SUBSTITUTE( Discount__c , &quot;%&quot;, &quot;&quot;)  )/100) ,0 )) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Labour pay percantage (calculated)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>