unpackaged/main/default/objects/Visit_completion_report__c/fields/Leak_Detection_Survey_Completed__c.field-meta.xml
<CustomField>
    <fullName>Leak_Detection_Survey_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Leak Detection Survey Completed?</label>
    <type>Checkbox</type>
</CustomField>