unpackaged/main/default/objects/Visit_completion_report__c/fields/Margin__c.field-meta.xml
<CustomField>
    <fullName>Margin__c</fullName>
    <label>Margin</label>
    <type>TextArea</type>
</CustomField>