unpackaged/main/default/objects/Visit_completion_report__c/fields/Material_costs_operative__c.field-meta.xml
<CustomField>
    <fullName>Material_costs_operative__c</fullName>
    <label>Material costs operative</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>