unpackaged/main/default/objects/Visit_completion_report__c/fields/Materials_supplied_by_operative_details__c.field-meta.xml
<CustomField>
    <fullName>Materials_supplied_by_operative_details__c</fullName>
    <label>Materials supplied by operative details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>